cmake_minimum_required(VERSION 3.23)
project(cpp_programming)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_programming main.cpp)
add_executable(cpp_programming_1 01-basic/01-hello.cpp)
add_executable(cpp_programming_2 02-intermediate/01-hello.cpp)
add_executable(cpp_programming_3 03-advance/01-hello.cpp)
